<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>groupId</groupId>
        <artifactId>records</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <groupId>groupId</groupId>
    <artifactId>app</artifactId>
    <version>1.0-SNAPSHOT</version>

    <dependencies>
        <dependency>
            <groupId>groupId</groupId>
            <artifactId>utility</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>groupId</groupId>
            <artifactId>gui-utility</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>groupId</groupId>
            <artifactId>parsers</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>groupId</groupId>
            <artifactId>anns</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>groupId</groupId>
            <artifactId>data</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <!-- annotations from the Checker Framework: nullness, interning, locking, ... -->
        <dependency>
            <groupId>org.checkerframework</groupId>
            <artifactId>checker-qual</artifactId>
            <version>2.1.13</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.checkerframework</groupId>
            <artifactId>checker</artifactId>
            <version>2.1.13</version>
            <scope>provided</scope>
        </dependency>
        <!-- The annotated JDK to use (change to jdk7 if using Java 7) -->
        <dependency>
            <groupId>org.checkerframework</groupId>
            <artifactId>jdk8</artifactId>
            <version>2.1.13</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.pholser</groupId>
            <artifactId>junit-quickcheck-core</artifactId>
            <version>0.7</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.pholser</groupId>
            <artifactId>junit-quickcheck-generators</artifactId>
            <version>0.7</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-core</artifactId>
            <version>4.0.6-alpha</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit</artifactId>
            <version>4.0.6-alpha</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>8.40.12</version>
        </dependency>

        <dependency>
            <groupId>org.fxmisc.richtext</groupId>
            <artifactId>richtextfx</artifactId>
            <version>0.7-M5</version>
        </dependency>


        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.10.1</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.5</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.0</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>21.0</version>
        </dependency>

        <dependency>
            <groupId>org.sosy-lab</groupId>
            <artifactId>java-smt</artifactId>
            <version>1.0.1</version>
        </dependency>

        <dependency>
            <groupId>one.util</groupId>
            <artifactId>streamex</artifactId>
            <version>0.6.3</version>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>1.3</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13</version>
            <scope>system</scope> <!-- should be test -->
            <systemPath>${basedir}/../lib/junit-4.13-SNAPSHOT.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>com.microsoft</groupId>
            <artifactId>z3</artifactId>
            <version>0.1</version>
            <scope>system</scope>
            <systemPath>${basedir}/../lib/com.microsoft.z3.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>org.bluej</groupId>
            <artifactId>threadchecker-tags</artifactId>
            <version>0.1</version>
            <scope>system</scope>
            <systemPath>${basedir}/../lib/threadchecker.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>com.fxexperience</groupId>
            <artifactId>scenic-view</artifactId>
            <version>8.7.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/../lib/scenicView.jar</systemPath>
        </dependency>
        <!--
        <dependency>
            <groupId>org.bluej</groupId>
            <artifactId>threadchecker-plugin</artifactId>
            <version>0.1</version>
            <scope>system</scope>
            <systemPath>J:\intellij-projects\bluej\threadchecker\pluginclasses</systemPath>
        </dependency>
        -->

    </dependencies>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <annotatedJdk>${org.checkerframework:jdk8:jar}</annotatedJdk>
    </properties>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.3</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>properties</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Sass compiler -->
            <plugin>
                <groupId>nl.geodienstencentrum.maven</groupId>
                <artifactId>sass-maven-plugin</artifactId>
                <version>2.23</version>
                <configuration>
                    <sassSourceDirectory>${basedir}/src/main/scss</sassSourceDirectory>
                    <destination>${project.build.directory}/classes</destination>
                </configuration>
                <executions>
                    <execution>
                        <id>generate-css</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>update-stylesheets</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- XSLT processor for help files -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>xml-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>transform</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <transformationSets>
                        <transformationSet>
                            <dir>src/main/help</dir>
                            <outputDir>${project.build.directory}/classes</outputDir>
                            <stylesheet>src/main/make-help.xsl</stylesheet>
                            <fileMappers>
                                <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
                                    <targetExtension>.help</targetExtension>
                                </fileMapper>
                            </fileMappers>
                        </transformationSet>
                        <transformationSet>
                            <dir>src/main/help</dir>
                            <outputDir>${project.build.directory}/classes</outputDir>
                            <stylesheet>src/main/make-help-html.xsl</stylesheet>
                            <fileMappers>
                                <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
                                    <targetExtension>.html</targetExtension>
                                </fileMapper>
                            </fileMappers>
                        </transformationSet>
                        <transformationSet>
                            <dir>src/main/help</dir>
                            <stylesheet>src/main/make-help-indiv.xsl</stylesheet>
                            <!-- When generating multiple files, outputDir is not respected.
                                 So we must pass as a parameter instead -->
                            <!-- <outputDir>${project.build.directory}/classes</outputDir> -->
                            <parameters>
                                <parameter>
                                    <name>myOutputDir</name>
                                    <value>${project.build.directory}/classes</value>
                                </parameter>
                            </parameters>
                        </transformationSet>
                    </transformationSets>
                </configuration>
                <!-- For XSLT 2.0: -->
                <dependencies>
                    <dependency>
                        <groupId>net.sf.saxon</groupId>
                        <artifactId>saxon</artifactId>
                        <version>8.7</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <includes>
                        <include>**/Test*.java</include>
                        <include>**/Prop*.java</include>
                    </includes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.pitest</groupId>
                <artifactId>pitest-maven</artifactId>
                <version>1.1.11</version>
                <configuration>
                    <targetClasses>
                        <param>records.data*</param>
                        <param>records.transformations*</param>
                    </targetClasses>
                </configuration>
            </plugin>

        </plugins>
    </build>
</project>